service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-service
  name: nginx-service
spec:
  ports:
  - port: 80
    nodePort: 30080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
